Fixed alignment of ride side

--- a/src/App.css
+++ b/src/App.css
@@ -196,8 +196,8 @@ textarea {
   color: #9B968B;
   display: inline-block;
   align-items: center;
-  padding: 5px;
-  width: 100%;
+  padding: 10px;
+  width: 97%;
   border-color: #FFFFFF80;
   border-width: 1px;
   border-radius: 5px; /* Rounded borders */
